--- a/src-tauri/windows/wix/main.wxs
+++ b/src-tauri/windows/wix/main.wxs
@@ -132,10 +132,10 @@
                          Height="17"
                          Property="CREATE_DESKTOP_SHORTCUT"
                          CheckBoxValue="1"
-                         Text="Create a &Desktop shortcut" />
+                         Text="Create a &amp;Desktop shortcut" />
 
-                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="&Back" />
-                <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="&Next" />
+                <Control Id="Back" Type="PushButton" X="180" Y="243" Width="56" Height="17" Text="&amp;Back" />
+                <Control Id="Next" Type="PushButton" X="236" Y="243" Width="56" Height="17" Default="yes" Text="&amp;Next" />
                 <Control Id="Cancel" Type="PushButton" X="304" Y="243" Width="56" Height="17" Cancel="yes" Text="Cancel" />
             </Dialog>
 
